# myhondaplus-desktop

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  TRANSLATING.md  pyproject.toml
.claude/skills/release/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  translation.yml  ui_feedback.yml  vehicle_connectivity.yml
.github/workflows/: agents-docs.yml  build-linux.yml  build-macos.yml  build-windows.yml  test.yml
scripts/: build_pyinstaller.py  check_release_version.py  smoke_test_bundle.py
src/myhondaplus_desktop/: __init__.py  __main__.py  app.py  config.py  i18n.py  icons.py  main_screen_controller.py  session.py  workers.py
src/myhondaplus_desktop/translations/: cs.json  da.json  de.json  en.json  es.json  fr.json  hu.json  it.json  nl.json  no.json  pl.json  sk.json  sv.json
src/myhondaplus_desktop/widgets/: commands.py  dashboard.py  geofence.py  login.py  schedules.py  status_bar.py  trips.py  vehicle.py
tests/: test_app.py  test_build_script.py  test_config.py  test_dashboard.py  test_geofence.py  test_i18n.py  test_icons.py  test_main_screen_controller.py  test_mainwindow.py  test_session.py  test_translations.py  test_trips.py  test_versioning.py  test_workers.py
