[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myhondaplus-desktop"
version = "0.1.0"
description = "Desktop GUI for Honda Connect Europe (My Honda+)"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "pymyhondaplus>=4.2.0",
    "PyQt6>=6.6",
]

[project.optional-dependencies]
dev = ["pytest", "ruff>=0.4"]

[project.gui-scripts]
myhondaplus-desktop = "myhondaplus_desktop.app:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["myhondaplus_desktop"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
myhondaplus_desktop = ["icons/*.svg", "translations/*.json"]
